  * Various cleanups in the C extentions to remove compile time warnings
  * Tweaked the splitDRX.py script to be more robust
  * Added support for libnova version 0.15.0
  * Improved support for STEPPED observations in lsl.common.sdf
  * Made the TBW read-out duration calculation consistent with the current version of MCS
  * Changed the allowed TBN tuning from 10 to 88 MHz to 5 to 93 MHz

0.5.3
  * Changed the DROS spectrometer reader to match the new format
  * Fixed the documentation for the various correlator.fx spectra functions
  * Updated the sphinx documentation to address Ticket #25
  * Added the session splitting script to IOC to address Ticket #24
  * Changed lsl.common.mcs.mjdmpm2datetime() to return naive datetime instances (Ticket #26)
  * Fixed a bug in lsl.common.sdf.Project that causes some observation non-overlaps to be reported as overlaps
  * Fixed a bug in the setup.py script that caused it to crash on systems without pkg-config installed
  * Modified splitDRX.py to cope with DRX data that begins with frames that list a decimation of zero
  * Added support for parsing the OBS_DRX_GAIN and OBS_TBN_GAIN keywords in the SDF parser
  * Cleaned up drxSpectra.py to better deal with files that have a tuning missing at the beginning or where the sample rate changes at the beginning of the file
  * Added a module to lsl.misc to generate autostereograms from 2-D NumPy arrays
  * Fixed a bug in lsl.misc.geodesy related to an exception that is thrown when the URL cannot be reached
  * Added support for parsing LST times at LWA-1 in lsl.common.sdf.parseTimeString()

0.5.2
  * Fixed a bug in gatherDebugging.py that caused the script to crash on missing modules
  * Fixed a bug in FEnginep[RC][23] that caused segmentation faults in Python 2.7
  * Made the module path finder a little more robust
  * Updated the LWA1 SSMIF to the May 16, 2012 version to include the latest antenna status codes
  * Added a beamformer to lsl.common.dp.SoftwareDP