@@ -128,14 +128,18 @@ def intDelayAndSum(antennas, data, sampleRate=dp_common.fS, azimuth=0.0, elevati
 		This task is primarily intended for use with TBW data.  The time resolution of
 		TBN data, even at the highest bandwidth, has an integer sample delay of zero
 		samples for all pointings.
-
+		
+	.. note:
+		"Bad" antennas (those with antenna.getStatus() != 33) are automatically
+		excluded from the beam.
+		
 	.. note:
 		In order for this output to be properly processed by :func:`lsl.correlate.fx.calcSpectra`,
 		The data need to be convert to a 2-D array via::
-
+			
 			>>> beamData = intDelayAndSum(stands, data)
 			>>> beamData.shape = (1,)+beamData.shape
-
+			
 	.. versionchanged:: 0.4.0
 		Switched over to passing in Antenna instances generated by the
 		:mod:`lsl.common.stations` module instead of a list of stand ID
@@ -155,15 +159,12 @@ def intDelayAndSum(antennas, data, sampleRate=dp_common.fS, azimuth=0.0, elevati
 	# streams
 	delays -= delays.min()
 	
-	antennas = antennas[:20]
-	data = data[:20,:]
-	delays = delays[:20]
-
 	# Delay and sum by looping over stands inside of looping over times
 	output = numpy.zeros((2, (data.shape[1]-delays.max())), dtype=numpy.float32)
 	for s,p in zip(range(len(antennas)), pols):
 		if antennas[s].getStatus() != 33:
 			continue
+			
 		start = delays[s]
 		stop = data.shape[1] - delays.max() + start
 		output[p,:] += data[s,start:stop]
@@ -358,6 +359,10 @@ def phaseAndSum(antennas, data, sampleRate=dp_common.fS, CentralFreq=49.0e6, azi
 	
 	.. note:
 		This task is intended to be used with TBN data streams.
+		
+	.. note:
+		"Bad" antennas (those with antenna.getStatus() != 33) are automatically
+		excluded from the beam.
 	"""
 
 	# Get the stand delays in seconds
@@ -376,7 +381,10 @@ def phaseAndSum(antennas, data, sampleRate=dp_common.fS, CentralFreq=49.0e6, azi
 	
 	# Loop over stands to compute the formed beam
 	output = numpy.zeros((2, data.shape[1]), dtype=numpy.complex64)
-	for b,s,p in zip(bln, xrange(len(antennas)), pols):
+	for b,s,p in zip(bln, range(len(antennas)), pols):
+		if antennas[s].getStatus() != 33:
+			continue
+			
 		output[p,:] += data[s,:]*b
 
 	# Check for empty polarization data.  Always return a 3-D array for the data
